# gg

./: .gitignore  README.md  setup.cfg
gg/: __main__.py  blob_manager.py  database.py  database.sql  file.py  file_manager.py  gg.py  models.py
gg/base/: command.py
gg/commands/: __init__.py  commit.py  config.py  initiate.py  merge.py  sprint.py  status.py  switch.py
gg/core/: blob_manager.py  database.py  file_manager.py  models.py  path.py
