[metadata]
name = gg
version = 0.1
description = Git to Go 
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/maltarouti/gg
author = Murtada Altarouti
author_email = murtada.altarouti@gmail.com
license = MIT
license_files = LICENSE


[options]
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    gg = gg.__main__:main
